[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buttons/play FREE PIXEL ART BUTTONS.png" type="Texture" id=1]
[ext_resource path="res://Buttons/settingsButton.png" type="Texture" id=2]
[ext_resource path="res://Buttons/exit FREE PIXEL ART BUTTONS.png" type="Texture" id=3]
[ext_resource path="res://Buttons.gd" type="Script" id=4]

[node name="Buttons" type="Node2D"]
script = ExtResource( 4 )

[node name="playButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 432.0
margin_top = 336.0
margin_right = 592.0
margin_bottom = 384.0
icon = ExtResource( 1 )

[node name="PlaySprite" type="Sprite" parent="playButton"]
position = Vector2( 80, 24 )
scale = Vector2( 2.27632, 2.27632 )
texture = ExtResource( 1 )

[node name="settingsBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 440.0
margin_top = 416.0
margin_right = 488.0
margin_bottom = 464.0

[node name="SettingsSprite" type="Sprite" parent="settingsBtn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="exitBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 512.0
margin_top = 424.0
margin_right = 586.0
margin_bottom = 464.0

[node name="ExitSprite" type="Sprite" parent="exitBtn"]
position = Vector2( 35.3251, 17.75 )
scale = Vector2( 2.225, 2.225 )
texture = ExtResource( 3 )
